fixed spacing of main body cards

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -17,6 +17,7 @@ body {
   background-color: #d9dcd6;
 }
 
+/* Defines nav bar link spacing, positioning and font  */
 /* Defines nav bar size and spacing, color, my name font and color */
 nav {
   padding: 15px;
@@ -26,6 +27,12 @@ nav {
   color: #ffffff;
   display: flex;
   border-radius: 0 0 15px 15px;
+  margin: auto;
+  font-size: 20px;
+  flex-direction: row;
+  display: flex;
+  padding: 0 30px;
+  text-align: center;
 }
 
 /* Sets font size for my name on nav bar and ensures letters are all displayed in line */
@@ -37,18 +44,6 @@ nav h1 {
 /* Sets font size and color for seo letters of website-company name */
 nav h1 .lastname {
   color: powderblue;
-}
-
-/* Defines nav bar link spacing, positioning and font  */
-nav  {
-  padding: 15px;
-  margin: auto;
-  font-family: sans-serif;
-  font-size: 20px;
-  flex-direction: row;
-  display: flex;
-  padding: 0 30px;
-  text-align: center;
 }
 
 /* Sets font color to white for site nav bar links */
@@ -63,23 +58,55 @@ p {
   margin-left: var(--alignment);
 }
 
+main {
+  display: flex;
+  /* Forces elements to the next line if they don't fit */
+  flex-wrap: wrap;
+  margin-top: 2%;
+
+}
+
+
+
+
 /* Standardizes the color and sizes of all main content cards and contained text*/
-main .content {
+main section {
   width: 50%;
   padding: 30px;
   height: fit-content;
   font-family: sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
   border-radius: 15px;
-  float: left;
-  margin: 20px 0;
+  flex: 1 0 0;
+  padding: 10px;
+  text-align: center;
 }
 
-main .headings {
+main section.contentcard {
+  background-color: #0072bb;
+  color: #ffffff;
+  border-style: solid;
+  border-width: 1px;
+  min-width: 70vw;
+  margin: 20px 10px 0px 3px;
+
+}
+
+main section.headcard {
+  background-color: #0072bb;
+  color: #ffffff;
+  border-style: solid;
+  border-width: 1px;
+  min-width: 20vw;
+  margin: 20px 2px 0px 10px;
+
+}
+
+main h2 {
   margin-left: 2%;
   font-size: 36px;
   text-align: right;
+  background-color:;
+  
 }
 
 /* Standardizes the sizes of all main content card images*/
